@@ -2107,6 +2107,9 @@ void CanvasController::resetCursor()
 		case int(view::Cursor::Eraser):
 			setViewportCursor(Cursors::eraser());
 			break;
+		case int(view::Cursor::Blank):
+			setViewportCursor(Qt::BlankCursor);
+			break;
 		default:
 			setViewportCursor(Cursors::triangleRight());
 			break;
